[project]
name = "chain-conductor-block-crawler"
version = "0.1.0"
description = "Crawls blocks from a blockchain node, parses the blocks for data, and populates the Chain Conductor database"
dependencies = [
    "ujson>=5.4.0,<=5.99.99",
    "aioboto3>=9.6.0,<=9.99.99",
    "aiohttp>=3.8.1,<=3.99.99",
    "aiodns>=3.0.0,<=3.99.99",
    "requests>=2.28.1,<=2.99.99",
    "click>=8.1.3,<=8.99.99",
    "pycryptodome>=3.15.0,<=3.99.99",
    "eth-abi>=3.0.0,<=3.99.99",
    "eth_bloom>=1.0.4,<=1.99.99",
]

[project.optional-dependencies]
dev = [
    "types-ujson>=5.4.0,<=5.99.99",
    "black>=22.6.0,<=22.99.99",
    "python-dotenv>=0.20.0,<=0.99.99",
    "ddt>=1.5.0,<=1.99.99",
    "coverage[toml]>=6.4.2,<=6.99.99",
    "unittest-xml-reporting>=3.2.0,<=3.99.99",
    "flake8>=4.0.1,<=4.99.99",
    "flake8-gl-codeclimate>=0.1.6,<=0.99.99",
    "mypy",
    "types-aioboto3",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
branch=true

[tool.coverage.report]
omit = ["test/*"]
precision = 2

[tool.black]
line-length=100