[project]
name = "block-rail-block-crawler"
version = "0.1.0"
description = "Crawls blocks from a blockchain node, parses the blocks for data, and populates the NFT database"
dependencies = [
    "ujson~=5.4",
    "aioboto3~=9.6",
    "aiohttp~=3.8",
    "aiodns~=3.0",
    "requests~=2.28",
    "click~=8.1",
    "pycryptodome~=3.15",
    "eth-abi~=3.0",
    "eth_bloom~=1.0",
    "hexbytes~=0.3",
    "backoff~=2.2",
]

[project.optional-dependencies]
dev = [
    "types-ujson~=5.4",
    "black~=22.6",
    "python-dotenv~=0.20",
    "ddt~=1.5",
    "coverage[toml]~=6.4",
    "unittest-xml-reporting~=3.2",
    "flake8~=4.0",
    "flake8-gl-codeclimate~=0.1",
    "mypy~=0.971",
    "types-aioboto3~=9.6",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
branch=true

[tool.coverage.report]
omit = ["test/*"]
precision = 2

[tool.black]
line-length=100