[project]
name = "block-crawler"
version = "1.0.1"
description = "Crawls blocks from a blockchain node, parses the blocks for data, and populates the NFT database"
readme = "README.md"
requires-python = ">=3.8,<3.11"
license = {file = "LICENSE"}
authors = [
    {name = "Adam L. Englander", email = "adam@zetta.fi"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Utilities",
    "Typing :: Typed",
]

dependencies = [
    "aioboto3~=9.6",
    "botocore~=1.24",
    "aiohttp~=3.8",
    "aiodns~=3.0",
    "requests~=2.28",
    "click~=8.1",
    "colorama~=0.4",
    "pycryptodome~=3.15",
    "eth-abi~=3.0",
    "eth_bloom~=1.0",
    "hexbytes~=0.3",
    "backoff~=2.2",
    "psutil~=5.9",
]

[project.urls]
"Source Code" = "https://github.com/block-crawler/block-crawler"
"Issue Tracker" = "https://github.com/block-crawler/block-crawler/issues/"

[project.scripts]
block-crawler = "blockcrawler.__main__:main"

[project.optional-dependencies]
dev = [
    # runtime tools
    "pre-commit~=3.0",
    "tox~=4.4",

    # static analysis
    "black~=22.6",
    "flake8~=4.0",
    "flake8-gl-codeclimate~=0.1",
    "mypy~=0.971",
    "types-aioboto3~=9.6",
    "types-psutil~=5.9",

    # unit testing and coverage
    "ddt~=1.5",
    "coverage[toml]~=6.4",
    "unittest-xml-reporting~=3.2",

    # configuration
    "python-dotenv~=0.20",
]

docs = [
    "sphinx~=6.1",
]

build = [
    "build~=0.10",
    "twine~=4.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
branch=true

[tool.coverage.report]
omit = ["test/*"]
precision = 2

[tool.black]
line-length=100


[tool.mypy]
python_version = 3.8

[[tool.mypy.overrides]]
module = [
    "ddt",
    "boto3.*"
]
ignore_missing_imports = true